--- a/src/app.html
+++ b/src/app.html
@@ -25,6 +25,7 @@
 		<meta name="viewport" content="width=device-width" />
 
 		%sveltekit.head%
+		<meta name="robots" content="noindex, nofollow" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
